--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <h1>「Webコンテンツ作成」の成果</h1>
+    <h2>本テーマの学習目的</h2>
+    <h2>プロジェクト課題について</h2>
+    <h2>数当てゲーム</h2>
+    <h2>毎回の実験で作成したページ</h2>
+    <h3>第１回 WWWとHTML</h3>
+    <p>今回はWebページやHTMLについて学んだ。Webページはリンクによって接続され、テキスト以外に画像や音声なども閲覧でき、そのサーバーのサービスを利用することもできると学んだ。
+      また、HTML文書の作りやさまざまな要素について学んだ。また、この授業で下の演習に取り組んだ。
+    </p>
+    <p>演習の成果</p>
+    <ul>
+      <li><a href="https://G284202022.github.io/medialabo/practice-html/structure.html">演習1-3:HTML文書の作成</a></li>
+      <li><a href="https://G284202022.github.io/medialabo/practice-html/elsements.html">演習1-4:HTMLのさまざまな要素</a></li>
+    </ul>
+    <h3>第２回 CSSによるWebページの装飾</h3>
+    <h3>第３回 JavaScriptの基本</h3>
+    <h3>第４回 DOMとJavaScript</h3>
+    <h3>第５回 イベント処理</h3>
   </body>
 </html>
