--- a/practice-html/elements.html
+++ b/practice-html/elements.html
@@ -7,11 +7,13 @@
   <body>
 	<h1><!--見出し: -->演習1-4: HTMLのさまざまな要素</h1>
 		<h2><!--小見出し: -->拓殖大学の5学部</h2>
-			<p>商学部</p>
-			<p>政経学部</p>
-			<p>外国語学部</p>
-			<p>国際学部</p>
-			<p>工学部</p>
+			<ul>
+				<li>商学部</li>
+				<li>政経学部</li>
+				<li>外国語学部</li>
+				<li>国際学部</li>
+				<li>工学部</li>
+			</ul>
 		<h2><!--小見出し: -->カレーの作り方</h2>
 			<ol>
 			<li>肉，じゃがいも，にんじん，玉ねぎを一口大に切る</li>
