index.htmlのデザインを追加

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>「Webコンテンツ作成」の成果</h1>
@@ -16,10 +17,17 @@
     </p>
     <p>演習の成果</p>
     <ul>
-      <li><a href="https://G284202022.github.io/medialabo/practice-html/structure.html">演習1-3:HTML文書の作成</a></li>
-      <li><a href="https://G284202022.github.io/medialabo/practice-html/elsements.html">演習1-4:HTMLのさまざまな要素</a></li>
+      <li><a href="practice-html/structure.html">演習1-3:HTML文書の作成</a></li>
+      <li><a href="practice-html/elements.html">演習1-4:HTMLのさまざまな要素</a></li>
     </ul>
     <h3>第２回 CSSによるWebページの装飾</h3>
+    <p>今回はcssについて学んだ。cssはhtmlの装飾をするものである。head要素にリンク要素を記述することでそのページを装飾できるようになる。
+      cssの書き方は装飾したい要素名に{}をつけ、その中にどのようなデザインにするかの情報を書き込む。また、この授業で下の演習に取り組んだ。
+    </p>
+    <p>演習の成果</p>
+    <ul>
+      <li><a href="practice-css/browser-intro.html">第2回演習:</a></li>
+    </ul>
     <h3>第３回 JavaScriptの基本</h3>
     <h3>第４回 DOMとJavaScript</h3>
     <h3>第５回 イベント処理</h3>
