project.htmlのデザインを追加

--- a/project.html
+++ b/project.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <h1>NHKの番組表</h1>
-    <!--ジャンルで検索、時間ごとの番組名、番組説明文の表-->
+    <head>
+        <meta charset="utf-8">
+        <title>NHKの番組表</title>
+        <link rel="stylesheet" href="projectstyle.css">
+      </head>
+      <body>
+        <h1>NHKの番組表</h1>
+        <!--ジャンルで検索、時間ごとの番組名、番組説明文の表-->
+        <table>
+            <caption>番組一覧</caption>
+            <thead>
+                <tr>
+                    <th scope="col">開始時刻</th>
+                    <th scope="col">終了時刻</th>
+                    <th scope="col">番組名</th>
+                    <th scope="col">番組内容</th>
+                </tr>
+            </thead>
+        </table>
+      </body>
 </html>
