--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>NHKの番組表</title>
         <link rel="stylesheet" href="projectstyle.css">
+        <script src="tv-program.js" defer></script>
       </head>
       <body>
         <h1>NHKの番組表</h1>
