--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h2>本テーマの学習目的</h2>
     <h2>プロジェクト課題について</h2>
     <h2>数当てゲーム</h2>
+    <p>課題3-1では数当てゲームをできるところまで作成した。ユーザーの入力した値を指定する方法を知らないため、今回は変数yosoを固定した。
+      また、出力先はコンソールに設定した。後々ここは修正していくらしい。</p>
+      <li><a href="practice-html/structure.html">数当てゲーム</a></li>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第１回 WWWとHTML</h3>
     <p>今回はWebページやHTMLについて学んだ。Webページはリンクによって接続され、テキスト以外に画像や音声なども閲覧でき、そのサーバーのサービスを利用することもできると学んだ。
@@ -29,6 +32,14 @@
       <li><a href="practice-css/browser-intro.html">第2回演習:</a></li>
     </ul>
     <h3>第３回 JavaScriptの基本</h3>
+    <p>今回はJavaScriptについて学んだ。ページにJavaScriptを追加するにはhead要素にscript要素を追加すれば良い。
+      javaとJavaScriptは似ているが注意すべき違う点もある。特に変数宣言はすべてletで宣言できること、比較演算では=が1つ増えることには注意したい。
+      また、この授業で下の演習に取り組んだ。
+    </p>
+    <p>演習の成果</p>
+    <ul>
+      <li><a href="practice-js/obj-practice.html">練習問題3-6</a></li>
+    </ul>
     <h3>第４回 DOMとJavaScript</h3>
     <h3>第５回 イベント処理</h3>
   </body>
