--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>数当てゲーム</h2>
     <p>課題3-1では数当てゲームをできるところまで作成した。ユーザーの入力した値を指定する方法を知らないため、今回は変数yosoを固定した。
       また、出力先はコンソールに設定した。後々ここは修正していくらしい。</p>
-      <li><a href="practice-html/structure.html">数当てゲーム</a></li>
+      <li><a href="kazuate.html">数当てゲーム</a></li>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第１回 WWWとHTML</h3>
     <p>今回はWebページやHTMLについて学んだ。Webページはリンクによって接続され、テキスト以外に画像や音声なども閲覧でき、そのサーバーのサービスを利用することもできると学んだ。
