だい4回について追加

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <h2>プロジェクト課題について</h2>
     <h2>数当てゲーム</h2>
     <p>課題3-1では数当てゲームをできるところまで作成した。ユーザーの入力した値を指定する方法を知らないため、今回は変数yosoを固定した。
-      また、出力先はコンソールに設定した。後々ここは修正していくらしい。</p>
+      また、出力先はコンソールに設定した。後々ここは修正していくらしい。
+      課題4-1では結果の表示をコンソールではなくページに表示するように修正した。予想メッセージと結果がHTMLに出力されるよう修正した。
+      また、hantei()の呼び出し回数を4回から1回にした。
+      
+    </p>
       <li><a href="kazuate.html">数当てゲーム</a></li>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第１回 WWWとHTML</h3>
@@ -41,6 +45,13 @@
       <li><a href="practice-js/obj-practice.html">練習問題3-6</a></li>
     </ul>
     <h3>第４回 DOMとJavaScript</h3>
+    <p>今回はDOMとJavaScriptについて学んだ。DOMを使用することで、JavaScriptなどによってWebコンテンツの内容を読み取ったり、コンテンツに変更を加えたりする処理が書けるようになった。
+      しかし、DOMを使ったプログラムは難しいので、コンソールを使って少しずつ書き進めると良い。また、この授業で下の課題に取り組んだ。
+    </p>
+    <p>演習の成果</p>
+    <ul>
+      <li><a href="practice-dom/dom-exercise.html">練習問題4-2~4-5</a></li>
+    </ul>
     <h3>第５回 イベント処理</h3>
   </body>
 </html>
