--- a/index.html
+++ b/index.html
@@ -1,57 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>My test page</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1>「Webコンテンツ作成」の成果</h1>
-    <h2>本テーマの学習目的</h2>
-    <h2>プロジェクト課題について</h2>
-    <h2>数当てゲーム</h2>
-    <p>課題3-1では数当てゲームをできるところまで作成した。ユーザーの入力した値を指定する方法を知らないため、今回は変数yosoを固定した。
-      また、出力先はコンソールに設定した。後々ここは修正していくらしい。
-      課題4-1では結果の表示をコンソールではなくページに表示するように修正した。予想メッセージと結果がHTMLに出力されるよう修正した。
-      また、hantei()の呼び出し回数を4回から1回にした。
-      
-    </p>
-      <li><a href="kazuate.html">数当てゲーム</a></li>
-    <h2>毎回の実験で作成したページ</h2>
-    <h3>第１回 WWWとHTML</h3>
-    <p>今回はWebページやHTMLについて学んだ。Webページはリンクによって接続され、テキスト以外に画像や音声なども閲覧でき、そのサーバーのサービスを利用することもできると学んだ。
-      また、HTML文書の作りやさまざまな要素について学んだ。また、この授業で下の演習に取り組んだ。
-    </p>
-    <p>演習の成果</p>
-    <ul>
-      <li><a href="practice-html/structure.html">演習1-3:HTML文書の作成</a></li>
-      <li><a href="practice-html/elements.html">演習1-4:HTMLのさまざまな要素</a></li>
-    </ul>
-    <h3>第２回 CSSによるWebページの装飾</h3>
-    <p>今回はcssについて学んだ。cssはhtmlの装飾をするものである。head要素にリンク要素を記述することでそのページを装飾できるようになる。
-      cssの書き方は装飾したい要素名に{}をつけ、その中にどのようなデザインにするかの情報を書き込む。また、この授業で下の演習に取り組んだ。
-    </p>
-    <p>演習の成果</p>
-    <ul>
-      <li><a href="practice-css/browser-intro.html">第2回演習:</a></li>
-    </ul>
-    <h3>第３回 JavaScriptの基本</h3>
-    <p>今回はJavaScriptについて学んだ。ページにJavaScriptを追加するにはhead要素にscript要素を追加すれば良い。
-      javaとJavaScriptは似ているが注意すべき違う点もある。特に変数宣言はすべてletで宣言できること、比較演算では=が1つ増えることには注意したい。
-      また、この授業で下の演習に取り組んだ。
-    </p>
-    <p>演習の成果</p>
-    <ul>
-      <li><a href="practice-js/obj-practice.html">練習問題3-6</a></li>
-    </ul>
-    <h3>第４回 DOMとJavaScript</h3>
-    <p>今回はDOMとJavaScriptについて学んだ。DOMを使用することで、JavaScriptなどによってWebコンテンツの内容を読み取ったり、コンテンツに変更を加えたりする処理が書けるようになった。
-      しかし、DOMを使ったプログラムは難しいので、コンソールを使って少しずつ書き進めると良い。また、この授業で下の課題に取り組んだ。
-    </p>
-    <p>演習の成果</p>
-    <ul>
-      <li><a href="practice-dom/dom-exercise.html">練習問題4-2~4-5</a></li>
-    </ul>
-    <h3>第５回 イベント処理</h3>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>My test page</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <h1>「Webコンテンツ作成」の成果</h1>
+  <h2>本テーマの学習目的</h2>
+  <P>このテーマでは、HTMLによってWebページの構造を記述する方法を知り、CSSによってWebページの見た目を設定する方法を知り、
+    JavaScriptによってWebページのインタラクティブな処理を記述する方法を知ることで、これらを組み合わせてWebページを構成する方法を学ぶ。</P>
+  <h2>プロジェクト課題について</h2>
+  <P>この課題は講義第1回から第6回を通して取り組んでいく。課題の内容はWWWのサーバへ検索し、サーバから届いたデータをWebページとして整形するようなWebアプリケーションを作成する。
+    データはNHKの番組表、グルメ情報、世界の天気の3つの中から選ぶ。私はNHKの番組表を選択したため、これのデータを検索、結果表示できるようにならなければならない。NHKの番組表の検索キーはserviceとgenreを使用していく。
+  </P>
+  <li><a href="project.html">プロジェクト課題で作成したページ:</a></li>
+  <h2>数当てゲーム</h2>
+  <P>この課題では数当てゲームを作成する。この課題は第3回から第5回の授業を通して完成させる。このゲームは、答えは乱数で決める、ユーザーは3回まで回答できる、外れた場合はヒントが出るといったルールで行う。
+    大まかな流れとしては第3回でJavaScriptの基礎について学び軽く数当てゲームを作ってみる。第4回でDOMについて学び、ページをそれらしくしていく。第5回でイベント処理について学び、これを完成させる。
+  </P>
+  <p>課題3-1では数当てゲームをできるところまで作成した。ユーザーの入力した値を指定する方法を知らないため、今回は変数yosoを固定した。
+    また、出力先はコンソールに設定した。後々ここは修正していくらしい。
+    課題4-1では結果の表示をコンソールではなくページに表示するように修正した。予想メッセージと結果がHTMLに出力されるよう修正した。
+    また、hantei()の呼び出し回数を4回から1回にした。個人的に確認のためにコンソールへの表示は削除しないでおいた。
+    課題5-1ではまず、HTMLのいらない要素を削除し、入力欄の設置に必要な要素を追加した。次にJavaScriptに入力欄の設置に必要なことを記入、yosiにテキストボックスの値を指定した。
+    これで数当てゲームは完成した。
+  </p>
+  <li><a href="kazuate.html">数当てゲームで作成したページ:</a></li>
+  <h2>毎回の実験で作成したページ</h2>
+  <h3>第１回 WWWとHTML</h3>
+  <p>今回はWebページやHTMLについて学んだ。Webページはリンクによって接続され、テキスト以外に画像や音声なども閲覧でき、そのサーバーのサービスを利用することもできると学んだ。
+    また、HTML文書の作りやさまざまな要素について学んだ。また、この授業で下の演習に取り組んだ。
+  </p>
+  <p>演習の成果</p>
+  <ul>
+    <li><a href="practice-html/structure.html">演習1-3:HTML文書の作成</a></li>
+    <li><a href="practice-html/elements.html">演習1-4:HTMLのさまざまな要素</a></li>
+  </ul>
+  <h3>第２回 CSSによるWebページの装飾</h3>
+  <p>今回はcssについて学んだ。cssはhtmlの装飾をするものである。head要素にリンク要素を記述することでそのページを装飾できるようになる。
+    cssの書き方は装飾したい要素名に{}をつけ、その中にどのようなデザインにするかの情報を書き込む。また、この授業で下の演習に取り組んだ。
+  </p>
+  <p>演習の成果</p>
+  <ul>
+    <li><a href="practice-css/browser-intro.html">第2回演習:</a></li>
+  </ul>
+  <h3>第３回 JavaScriptの基本</h3>
+  <p>今回はJavaScriptについて学んだ。ページにJavaScriptを追加するにはhead要素にscript要素を追加すれば良い。
+    javaとJavaScriptは似ているが注意すべき違う点もある。特に変数宣言はすべてletで宣言できること、比較演算では=が1つ増えることには注意したい。
+    また、この授業で下の演習に取り組んだ。
+  </p>
+  <p>演習の成果</p>
+  <ul>
+    <li><a href="practice-js/obj-practice.html">練習問題3-6</a></li>
+  </ul>
+  <h3>第４回 DOMとJavaScript</h3>
+  <p>今回はDOMとJavaScriptについて学んだ。DOMを使用することで、JavaScriptなどによってWebコンテンツの内容を読み取ったり、コンテンツに変更を加えたりする処理が書けるようになった。
+    しかし、DOMを使ったプログラムは難しいので、コンソールを使って少しずつ書き進めると良い。また、この授業で下の課題に取り組んだ。
+  </p>
+  <p>演習の成果</p>
+  <ul>
+    <li><a href="practice-dom/dom-exercise.html">練習問題4-2~4-5</a></li>
+  </ul>
+  <h3>第５回 イベント処理</h3>
+  <P>今回はイベントについて学んだ。イベントはWebページ上で起こった動作や出来事のことである。この授業では主にクリックした際のイベント処理いついて学んだ。
+    ある要素の色を変えたり、背景の色をランダムで変えたりした。また、入力欄の追加についても学んだ。type属性値に注意したい。また、この授業では下の課題に取り組んだ。
+  </P>
+  <p>演習の成果</p>
+  <ul>
+    <li><a href="practice-event/event-intro.html">練習問題5-2</a></li>
+    <li><a href="practice-event/event-list.html">練習問題5-2</a></li>
+  </ul>
+</body>
+
 </html>
