検索用のボタンを追加

--- a/project.html
+++ b/project.html
@@ -9,6 +9,9 @@
       <body>
         <h1>NHKの番組表</h1>
         <!--ジャンルで検索、時間ごとの番組名、番組説明文の表-->
+        <label for="kensaku">検索:</label>
+        <input type="search" name="kensaku" id="kensaku" size="10">
+        <button id="print">検索</button>
         <p id="jouhou"></p>
       </body>
 </html>
