--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <P>この課題は講義第1回から第6回を通して取り組んでいく。課題の内容はWWWのサーバへ検索し、サーバから届いたデータをWebページとして整形するようなWebアプリケーションを作成する。
     データはNHKの番組表、グルメ情報、世界の天気の3つの中から選ぶ。私はNHKの番組表を選択したため、これのデータを検索、結果表示できるようにならなければならない。NHKの番組表の検索キーはserviceとgenreを使用していく。
   </P>
-  <li><a href="project.html">プロジェクト課題で作成したページ:</a></li>
+  <li><a href="project.html">プロジェクト課題</a></li>
   <h2>数当てゲーム</h2>
   <P>この課題では数当てゲームを作成する。この課題は第3回から第5回の授業を通して完成させる。このゲームは、答えは乱数で決める、ユーザーは3回まで回答できる、外れた場合はヒントが出るといったルールで行う。
     大まかな流れとしては第3回でJavaScriptの基礎について学び軽く数当てゲームを作ってみる。第4回でDOMについて学び、ページをそれらしくしていく。第5回でイベント処理について学び、これを完成させる。
@@ -28,7 +28,7 @@
     課題5-1ではまず、HTMLのいらない要素を削除し、入力欄の設置に必要な要素を追加した。次にJavaScriptに入力欄の設置に必要なことを記入、yosiにテキストボックスの値を指定した。
     これで数当てゲームは完成した。
   </p>
-  <li><a href="kazuate.html">数当てゲームで作成したページ:</a></li>
+  <li><a href="kazuate.html">数当てゲーム</a></li>
   <h2>毎回の実験で作成したページ</h2>
   <h3>第１回 WWWとHTML</h3>
   <p>今回はWebページやHTMLについて学んだ。Webページはリンクによって接続され、テキスト以外に画像や音声なども閲覧でき、そのサーバーのサービスを利用することもできると学んだ。
@@ -45,7 +45,7 @@
   </p>
   <p>演習の成果</p>
   <ul>
-    <li><a href="practice-css/browser-intro.html">第2回演習:</a></li>
+    <li><a href="practice-css/browser-intro.html">第2回演習</a></li>
   </ul>
   <h3>第３回 JavaScriptの基本</h3>
   <p>今回はJavaScriptについて学んだ。ページにJavaScriptを追加するにはhead要素にscript要素を追加すれば良い。
