--- a/project.html
+++ b/project.html
@@ -10,14 +10,14 @@
       <body>
         <h1>NHKの番組表</h1>
         <h2>番組を選択してください</h2>
-        <P>
+        <p class="sv">
           <input type="radio" name="bangumi" id="bangumi1" value="1">
           <label for="bangumi1">NHK総合1</label>
           <input type="radio" name="bangumi" id="bangumi2" value="2">
           <label for="bangumi2">Eテレ1</label>
-        </P>
+        </p>
         <h2>ジャンルを選択してください</h2>
-        <p>
+        <p class="jn">
           <input type="radio" name="janru" id="news" value="news">
           <label for="news">ニュース・報道</label>
           <input type="radio" name="janru" id="sport" value="sport">
