第6回の内容を追加

--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
   </P>
   <li><a href="project.html">プロジェクト課題</a></li>
   <h2>数当てゲーム</h2>
-  <P>この課題では数当てゲームを作成する。この課題は第3回から第5回の授業を通して完成させる。このゲームは、答えは乱数で決める、ユーザーは3回まで回答できる、外れた場合はヒントが出るといったルールで行う。
+  <p>この課題では数当てゲームを作成する。この課題は第3回から第5回の授業を通して完成させる。このゲームは、答えは乱数で決める、ユーザーは3回まで回答できる、外れた場合はヒントが出るといったルールで行う。
     大まかな流れとしては第3回でJavaScriptの基礎について学び軽く数当てゲームを作ってみる。第4回でDOMについて学び、ページをそれらしくしていく。第5回でイベント処理について学び、これを完成させる。
-  </P>
-  <p>課題3-1では数当てゲームをできるところまで作成した。ユーザーの入力した値を指定する方法を知らないため、今回は変数yosoを固定した。
-    また、出力先はコンソールに設定した。後々ここは修正していくらしい。
-    課題4-1では結果の表示をコンソールではなくページに表示するように修正した。予想メッセージと結果がHTMLに出力されるよう修正した。
-    また、hantei()の呼び出し回数を4回から1回にした。個人的に確認のためにコンソールへの表示は削除しないでおいた。
-    課題5-1ではまず、HTMLのいらない要素を削除し、入力欄の設置に必要な要素を追加した。次にJavaScriptに入力欄の設置に必要なことを記入、yosiにテキストボックスの値を指定した。
-    これで数当てゲームは完成した。
   </p>
+  <p>課題3-1では数当てゲームをできるところまで作成した。ユーザーの入力した値を指定する方法を知らないため、今回は変数yosoを固定した。
+    また、出力先はコンソールに設定した。後々ここは修正していくらしい。</p>
+  <P>課題4-1では結果の表示をコンソールではなくページに表示するように修正した。予想メッセージと結果がHTMLに出力されるよう修正した。
+    また、hantei()の呼び出し回数を4回から1回にした。個人的に確認のためにコンソールへの表示は削除しないでおいた。</P>
+  <p>課題5-1ではまず、HTMLのいらない要素を削除し、入力欄の設置に必要な要素を追加した。次にJavaScriptに入力欄の設置に必要なことを記入、yosiにテキストボックスの値を指定した。
+    これで数当てゲームは完成した。</p>
   <li><a href="kazuate.html">数当てゲーム</a></li>
   <h2>毎回の実験で作成したページ</h2>
   <h3>第１回 WWWとHTML</h3>
@@ -73,6 +72,12 @@
     <li><a href="practice-event/event-intro.html">練習問題5-2</a></li>
     <li><a href="practice-event/event-list.html">練習問題5-3</a></li>
   </ul>
+  <h3>第6回 プロジェクト課題を完成させよう</h3>
+  <p>今回は、通信処理について学んだ。この講義ではAJAX通信を使用し、これに限ってはaxiosというライブラリを使う。axiosはAJAX通信を実現するライブラリであり、XMLHttpRequestを使うより楽に使える。
+    通信処理を学んだことで講義の内容は終了し、今まで学んだことを活用し、プロジェクト課題を完成させた。
+  </p>
+  <h2>工夫点，苦心点，強調点，感想</h2>
+  <p></p>
 </body>
 
 </html>
