表示形式を大幅に変更

--- a/project.html
+++ b/project.html
@@ -44,14 +44,19 @@
           <label for="hukusi">福祉</label>
         </p>
         <p><button id="kensaku">検索</button></p>
-        <h3 id="k0"></h3>
-        <h3 id="k1"></h3>
-        <h3 id="k2"></h3>
-        <h3 id="k3"></h3>
-        <h3 id="k4"></h3>
-        <h3 id="k5"></h3>
-        <h3 id="k6"></h3>
-        <h3 id="k7"></h3>
+        <table >
+          <thead>
+            <tr>
+              <th>番組名</th>
+              <th>サブタイトル</th>
+              <th>開始時刻</th>
+              <th>終了時刻</th>
+              <th>番組説明</th>
+              <th>出演者</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
 
       </body>
 </html>
