エラー発生部を修正

--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
               <th>出演者</th>
             </tr>
           </thead>
-          <tbody></tbody>
+          <tbody><tr></tr></tbody>
         </table>
 
       </body>
