エラーを修正

--- a/project.html
+++ b/project.html
@@ -55,7 +55,10 @@
               <th>出演者</th>
             </tr>
           </thead>
-          <tbody><tr></tr></tbody>
+          <tbody>
+            <tr></tr>
+            <tr></tr>
+        </tbody>
         </table>
 
       </body>
