--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
         <p><button id="kensaku">検索</button></p>
         <table >
           <thead>
-            <tr>
+            <tr id="head">
               <th>番組名</th>
               <th>サブタイトル</th>
               <th>開始時刻</th>
