境界線を追加

--- a/project.html
+++ b/project.html
@@ -44,7 +44,7 @@
           <label for="hukusi">福祉</label>
         </p>
         <p><button id="kensaku">検索</button></p>
-        <table >
+        <table border="1">
           <thead>
             <tr id="head">
               <th>番組名</th>
@@ -56,7 +56,7 @@
             </tr>
           </thead>
           <tbody>
-            
+
         </tbody>
         </table>
 
