--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
         <script src="project.js" defer></script>
       </head>
       <body>
-        <h1>NHKの番組表</h1>
+        <h1>NHKの番組表検索</h1>
         <h2>番組を選択してください</h2>
         <p class="sv">
           <input type="radio" name="bangumi" id="bangumi1" value="1">
