1000字の最後の文を追加

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
     通信処理を学んだことで講義の内容は終了し、今まで学んだことを活用し、プロジェクト課題を完成させた。
   </p>
   <h2>工夫点，苦心点，強調点，感想</h2>
-  <p></p>
+  <p>私はこの講義を通して、Webコンテンツ作成についてよく学べたと思う。最初に習ったHTMLの書き方では今まで全く知らなかったことだったので、理解するのに苦戦した。特に要素については随分と混乱した。演習１−４ではこれでもかというほどいろんな要素を使う必要があり、とても大変だった。
+    次に習ったcssではHTMLにさまざまな装飾を施すことができ、結構楽しかった。特に練習問題２−３ではページがどんどん見やすく変化していくのが面白かった。また、cssの参考資料はproject課題に取り組むにあたって非常に役立った。次に学んだJavaScriptはすでにjavaについて学んでいたから感覚的に理解できた。
+    しかし、javaとの違いが結構あるため、間違えないよう慎重に取り組んだ。特にif文の比較とfor-of文には気をつけた。また、オブジェクトに関しては少し苦戦した。記述については配列のイメージで理解できたが、オブジェクトの参照は少し難しく感じた。そのため、練習３−６は思ったよりも大変だった。
+    次に学んだDOMは最初はわざわざJavaScriptで書かずにHTMLを修正すれば良いのではないかと思っていたが、全くそんなことはなく驚いた。DOMでできることも非常に多く、練習４−２から４−５では完了まで結構な時間がかかってしまった。次に学んだイベント処理ではページに動きをつける方法を学んだ。意識したことがなかったが、練習５−３に取り組んでこんなにイベントがあったのかと驚いた。
+    また、練習５−４ではinput要素を学んで、ページの裏ではこんな書き方をしていたのこと感心した。最後に学んだAJAX通信は量としては少なかったが非常に重要なことでちゃんと使えるようにした。大きな課題として数当てゲームの作成とproject課題の2つがあった。数当てゲームの作成は3回に分けて行うことで何をやればいいか明確だったので大変ではあったが割とサクサク進められた。if文によって正誤判定を作るのが特に難しかった。
+    project課題ではNHKの番組表を作った。今まで学んだことを全て利用し作成するのは地道に進めていたとはいえ流石に疲れた。特に講義では学ばなかったtable要素を使ったのがきつかった。tr要素を必要分作っても、最初の要素にしかtd要素が格納されなかったり、前回の検索結果が消せなかったりと大変だったが、なんとか完成させることができた。
+  </p>
 </body>
 
 </html>
